crates/standout-test/tests/snapshots/help_matrix__help__mode_term-debug__color_off__theme_downstream__entry_help--7fb28c5c.snap
---
source: crates/standout-test/tests/help_matrix.rs
expression: result.stdout_plain()
---
[about]Diff a git range.

Names a change the way a human would.[/about]

[header]USAGE[/header]
  [usage]lookma [OPTIONS] [RANGE]
       lookma [OPTIONS] [RANGE] <COMMAND>[/usage]

[header]COMMANDS[/header]
  [item]review[/item]        [desc]Review a range hunk by hunk[/desc]
  [item]stat[/item]          [desc]Summarize a range by file[/desc]
  [item]export[/item]        [desc]Write the review to a file[/desc]
  [item]help[/item]          [desc]Print this message or the help of the given subcommand(s)[/desc]

[header]ARGUMENTS[/header]
  [metavar]RANGE[/metavar]         [desc]Git range to diff, e.g. main..HEAD[/desc]

[header]OPTIONS[/header]
  [item]--staged[/item]                   [desc]Diff the staged changes[/desc]
  [item]-v[/item]                         [desc]Raise the detail level[/desc]
  [item]--threshold[/item] [metavar]<RATIO>[/metavar]        [desc]Move/rename similarity threshold[/desc]
  [item]-c, --color[/item] [metavar]<BOOL>[/metavar]         [desc]Enable ANSI color[/desc]
                             [values]possible values: true, false[/values]
  [item]-p, --pattern[/item] [metavar]<pattern>[/metavar]    [desc]Only diff paths matching this glob[/desc]
  [item]--summary[/item] [metavar]<STYLE>[/metavar]          [desc]How much of each change to describe[/desc]
                             [default]default: brief[/default]
                             [values]possible values: brief, full, none[/values]
  [item]--output[/item] [metavar]<MODE>[/metavar]            [desc]Output format[/desc]
                             [default]default: auto[/default]
                             [values]possible values: auto, term, text, term-debug, json, yaml, csv[/values]
  [item]--output-file-path[/item] [metavar]<PATH>[/metavar]  [desc]Write output to file instead of stdout[/desc]
  [item]-h, --help[/item]                 [desc]Print help (see more with '--help')[/desc]

[header]LEARN MORE[/header]
  [item]naming[/item]        [desc]Naming[/desc]
  [item]ranges[/item]        [desc]Ranges[/desc]
